--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "log-symbols": "^4.1.0"
   },
   "dependencies": {
+    "dayjs": "^1.10.7",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.9",
     "tailwindcss": "^2.1.1"
