--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "gulp-sass": "^4.1.0",
     "gulp-terser": "^2.0.1",
     "gulp-webp": "^4.0.1",
-    "log-symbols": "^4.1.0"
+    "log-symbols": "^4.1.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.12"
   },
   "dependencies": {
     "dayjs": "^1.10.7",
-    "node-sass": "^5.0.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^2.1.1"
+    "node-sass": "^5.0.0"
   }
 }
